added listing of pet prescriptions and therapies

--- a/frontend/petshealth/src/app/homepage/homepage.component.html
+++ b/frontend/petshealth/src/app/homepage/homepage.component.html
@@ -1,7 +1,11 @@
 <div class="parent-container">
     <app-navbar></app-navbar>
     <div class="grid-container">
-      <p>homepage works!</p>
+      <router-outlet></router-outlet>
+      <ng-container *ngIf="showMessage">
+        <p>Please select one of the options in the nav bar</p>
+      </ng-container>
+      
     </div>
   </div>
   
