--- a/frontend/petshealth/src/app/navbar/navbar.component.html
+++ b/frontend/petshealth/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
   [opened]="(isHandset$ | async) ? isNavOpen : true" 
   >
   <mat-nav-list class="nav">
-    <a mat-list-item routerLink="/home/dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
-    <a mat-list-item routerLink="/home/members" routerLinkActive="active">Members</a>
-    <a mat-list-item routerLink="/home/link3" routerLinkActive="active">Link 3</a>
+    <a mat-list-item routerLink="/home/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+    <a mat-list-item routerLink="/home/therapies" routerLinkActive="active">Therapies</a>
+    <a mat-list-item routerLink="/home/prescription" routerLinkActive="active">Prescription</a>
   </mat-nav-list>
   
     
