--- a/frontend/petshealth/src/app/therapies/therapies.component.html
+++ b/frontend/petshealth/src/app/therapies/therapies.component.html
@@ -1,1 +1,29 @@
-<p>therapies works!</p>
+<div class="grid-item item">
+    <div class="task">
+      <p>ALL THERAPIES</p>
+    </div>
+    <table mat-table [dataSource]="therapies" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let therapy">{{ therapy.id }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let therapy">{{ therapy.description }}</td>
+      </ng-container>
+  
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let therapy">{{ therapy.price | currency }}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="['id', 'description', 'price']"></tr>
+      <tr mat-row *matRowDef="let therapy; columns: ['id', 'description', 'price']" 
+          (click)="navigatetoTherapyDetails(therapy.id)">
+      </tr>
+    </table>
+  </div>
+  
+  <a [routerLink]="['/home/dashboard/register']">Register your therapy</a>
+  
