--- a/frontend/petshealth/src/app/therapies/therapies.component.html
+++ b/frontend/petshealth/src/app/therapies/therapies.component.html
@@ -25,5 +25,5 @@
     </table>
   </div>
   
-  <a [routerLink]="['/home/dashboard/register']">Register your therapy</a>
+  <a [routerLink]="['/home/therapiesdetails']">Register your therapy</a>
   
