--- a/frontend/petshealth/src/app/vetlogin/vetlogin.component.html
+++ b/frontend/petshealth/src/app/vetlogin/vetlogin.component.html
@@ -6,6 +6,7 @@
       fxLayout="column"
       fxLayoutAlign="space-around center"
     >
+    <h2>Veteranian log in</h2>
       <div
         class="floating-label"
         fxLayoutAlign="space-between start"
@@ -42,11 +43,8 @@
         Log in
       </button>
   
-      <div class="register">
-        <a mat-button routerLink="/register"> <u>Dont have an account? </u></a>
-      </div>
-      <div class="vet">
-        <a mat-button routerLink="/vet"> <u>You are a veteranian? </u></a>
+      <div class="user">
+        <a mat-button routerLink="/"> <u> Not a veteranian?</u></a>
       </div>
     </form>
   </div>
