started eiditing the css , added details for prescription , therapies and visit

--- a/frontend/petshealth/src/app/header/header.component.html
+++ b/frontend/petshealth/src/app/header/header.component.html
@@ -14,15 +14,12 @@
       mat-icon-button
       (click)="toggleNav()"
     >
-    <mat-icon>menu</mat-icon>
+    <mat-icon>Menu</mat-icon>
     </button>
   </div>
-    <div routerLink="/home/dashboard">
-      <img src="../../assets/logo.png"  class="logo" />
-    </div>
   </div>
 
-  <div class="name">TaskTaskBoom</div>
-  <div (click)="logout()" >User: {{username}}</div>
+  <div class="name">PetsHealth</div>
+  <div (click)="logout()" >Log out</div>
 </mat-toolbar>
 
