--- a/frontend/petshealth/src/app/homepage/homepage.component.scss
+++ b/frontend/petshealth/src/app/homepage/homepage.component.scss
@@ -1,23 +1,13 @@
-$background: white;
-
-$third-color: rgb(106, 8, 211);
-$colortext: rgb(82, 60, 106);
-$fontsize-no-active: 16px;
-$fontsize-active: 19px;
-
-$primary-color: rgba(82, 60, 106, 0.7);
-$secondary-color: rgb(195, 195, 195);
-
 .parent-container {
   display: flex;
   align-items: flex-start;
-  gap: 15px; 
+  gap: 15px;
   padding: 13px;
-  background: $background;
+  background: white;
 }
 
 app-navbar {
-  flex: 0 0 auto; 
+  flex: 0 0 auto;
 }
 
 .grid-container {
@@ -28,6 +18,20 @@ app-navbar {
   display: grid;
   gap: 15px;
   padding: 13px;
+}
+
+
+
+.center-message {
+  font-size: 25px;
+  font-weight: bold;
+  color:#3f51b5;
+  margin: 20% 0;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 @media (max-width: 768px) {
@@ -42,5 +46,5 @@ app-navbar {
 }
 
 mat-grid-tile {
-  background: lightblue;
+  background: lightgoldenrodyellow;
 }
