--- a/frontend/petshealth/src/app/prescriptions/prescriptions.component.html
+++ b/frontend/petshealth/src/app/prescriptions/prescriptions.component.html
@@ -1,29 +1,25 @@
-<div class="grid-item item">
-    <div class="task">
-      <p>ALL MEDICATIONS</p>
-    </div>
-    <table mat-table [dataSource]="medications" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let medication">{{ medication.id }}</td>
-      </ng-container>
+<div class="grid-item item" fxLayout="column" fxLayoutAlign="center center">
+  <h2 class="heading">All Pets' Prescriptions</h2>
   
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let medication">{{ medication.name }}</td>
-      </ng-container>
-  
-      <ng-container matColumnDef="expirationdate">
-        <th mat-header-cell *matHeaderCellDef>Expiration Date</th>
-        <td mat-cell *matCellDef="let medication">{{ medication.expirationdate }}</td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="['id', 'name', 'expirationdate']"></tr>
-      <tr mat-row *matRowDef="let medication; columns: ['id', 'name', 'expirationdate']" 
-          (click)="navigatetoPrescriptionDetails(medication.id)">
-      </tr> 
-    </table>
-  </div>
-  
-  <a [routerLink]="['/home/prescriptiondetails']">Register your medication</a>
-  
+  <table mat-table [dataSource]="medications" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let medication">{{ medication.id }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let medication">{{ medication.name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="expirationdate">
+      <th mat-header-cell *matHeaderCellDef>Expiration Date</th>
+      <td mat-cell *matCellDef="let medication">{{ medication.expirationdate }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['id', 'name', 'expirationdate']"></tr>
+    <tr mat-row *matRowDef="let medication; columns: ['id', 'name', 'expirationdate']" 
+        (click)="navigatetoPrescriptionDetails(medication.id)">
+    </tr> 
+  </table>
+</div>
