--- a/frontend/petshealth/src/app/therapies/therapies.component.scss
+++ b/frontend/petshealth/src/app/therapies/therapies.component.scss
@@ -1,24 +1,23 @@
-.task
-{
-  background-color: lightgray
+.heading {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #3f51b5;
 }
 
 .item {
-
   height: fit-content;
   width: auto;
   overflow: auto;
-  top: 0px;
   background-color: #f2f2f2;
-  bottom: 1px solid #f2f2f2;
+  border-bottom: 1px solid #dcdcdc;
   text-align: center;
 
-  p,u {
-    background-color: lightyellow;
-    color: white;
-   
-    
-    margin: 0% 3% 0% 3%;
+  p, u {
+    background-color: #f0e68c;
+    color: #000000;
+    margin: 0 3%;
     font-size: 18px;
     font-weight: bold;
     text-align: left;
@@ -27,29 +26,30 @@
   table {
     height: auto;
     width: 100%;
-    background-color: lightyellow;
-    
-    
+    background-color: #f0e68c;
+    border-collapse: collapse;
+
     th {
       font-size: large;
-      color: white;
-      background-color: yellow;
+      color: #ffffff;
+      background-color: #3f51b5;
       text-align: center;
     }
-    tr{
-      color:white;
-      background-color: lightsalmon;
+
+    tr {
+      background-color: #f0e68c;
+      color: #000000;
     }
-    
+
     td {
       font-size: 17px;
-      border-bottom: 1px solid white;
-      text-align: center;}
-    
+      border-bottom: 1px solid #dcdcdc;
+      text-align: center;
+    }
+
     tr:hover {
-      background-color: goldenrod;
-      color: black;
+      background-color: #ffd700;
+      color: #000000;
     }
   }
-  
 }
