--- a/frontend/petshealth/src/app/register/register.component.html
+++ b/frontend/petshealth/src/app/register/register.component.html
@@ -1,5 +1,6 @@
 <div class="content" fxLayout="column" fxLayoutAlign="space-around center">
-    <h4>Welcome to <span>PetsHealth</span></h4>
+    <h1>Welcome to <span>PetsHealth</span></h1>
+    <h2>Nice to meet you!</h2>
   
     <form [formGroup]="registerFormGroup" fxLayout="column" fxLayoutAlign="space-around center">
       <div class="floating-label" fxLayoutAlign="space-between start" fxLayout="column">
@@ -46,8 +47,21 @@
   
       <button fxLayout="column" fxLayoutAlign="center center" (click)="collectFormData()">Register Account</button>
   
-      <div class="register">
+      <div class="login">
         <a mat-button routerLink="/login">Already have an account?</a>
       </div>
     </form>
+  </div>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+  <div class="ajax-loader">
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>  
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
   </div>
