--- a/frontend/petshealth/src/app/dashboard/dashboard.component.html
+++ b/frontend/petshealth/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="grid-container">
   <router-outlet></router-outlet>
   </div>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  
+  <div class="paw-print">
+    <i class="fa fa-paw"></i>
+  </div>
 
