--- a/frontend/petshealth/src/app/login/login.component.html
+++ b/frontend/petshealth/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="content" fxLayout="column" fxLayoutAlign="space-around center">
     <h1>We are <span>PetsHealth</span></h1>
-    <p>Welcome back!</p>
+    <h2>Welcome back!</h2>
     <form
       [formGroup]="loginFormGroup"
       fxLayout="column"
@@ -50,3 +50,17 @@
       </div>
     </form>
   </div>
+
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+  <div class="ajax-loader">
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>  
+    <div class="paw"><i class="fas fa-paw"></i></div>
+    <div class="paw"><i class="fas fa-paw"></i></div>
+  </div>
+  
