--- a/frontend/petshealth/src/app/login/login.component.scss
+++ b/frontend/petshealth/src/app/login/login.component.scss
@@ -1,14 +1,34 @@
+div.vet,div.register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2%;
+}
+
+
+div.vet:hover,div.register:hover {
+  background-color: #3f51b5;
+  color: white !important;
+}
 
 h1 {
   font-size: 60px;
   font-weight: 600;
   color: #000;
   opacity: 0.85;
+  margin-top: 5%;
+}
+h2 {
+  font-size: 40px;
+  font-weight: 600;
+  color: #000;
+  opacity: 0.85;
+  margin-top: 2%;
+}
 
-  span {
-    color: rgb(82, 60, 106);
-    font-weight: 700;
-  }
+h1 span {
+  color: #3f51b5;
+  font-weight: 700;
 }
 
 label {
@@ -26,43 +46,36 @@ form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 90%;
+  width: 50%;
+}
 
-  .register {
-    margin-top: 5%;
-  }
-  .vet {
-    margin-top: 5%;
-  }
+form h3 {
+  margin-bottom: 10px;
+  color: rgba(0, 0, 0, 0.5);
+}
 
-  h4 {
-    margin-bottom: 10px;
-    color: rgba(#000, 0.5);
-  }
-
-  p {
-    line-height: 155%;
-    font-size: 14px;
-    color: #000;
-    opacity: 0.65;
-    font-weight: 400;
-    max-width: 200px;
-    margin-bottom: 20px;
-  }
+form p {
+  line-height: 155%;
+  font-size: 14px;
+  color: #000;
+  opacity: 0.65;
+  font-weight: 400;
+  max-width: 200px;
+  margin-bottom: 20px;
 }
 
 a.discrete {
-  color: rgba(#000, 0.4);
+  color: #3f51b5;
   font-size: 14px;
-  border-bottom: solid 1px rgba(#000, 0);
+  border-bottom: solid 1px #3f51b5;
   padding-bottom: 4px;
   font-weight: 300;
   transition: all 0.3s ease;
   margin-top: 40px;
+}
 
-  &:hover {
-    border-bottom: solid 1px rgba(#000, 0.2);
-  }
+a.discrete:hover {
+  border-bottom: solid 1px #303f9f;
 }
 
 button {
@@ -76,17 +89,18 @@ button {
   font-weight: 500;
   box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
   border: none;
+  background-color: #3f51b5;
   transition: all 0.3s ease;
   outline: 0;
+}
 
-  &:hover {
-    transform: translateY(-3px);
-    
+button:hover {
+  background-color: #303f9f;
+  transform: translateY(-3px);
+}
 
-    &:active {
-      transform: scale(0.99);
-    }
-  }
+button:active {
+  transform: scale(0.99);
 }
 
 input {
@@ -94,17 +108,190 @@ input {
   font-size: 16px;
   padding: 20px 5px;
   height: 56px;
-  border: solid 1px rgba(0, 0, 0, 0.1);
- 
+  border: solid 1px #c5cae9;
   width: 280px;
   box-sizing: border-box;
   transition: all 0.3s linear;
-  color: #000000;
+  color: #000;
   font-weight: 400;
   border-radius: 24px !important;
-  &:focus {
-    
-    outline: 0;
-    
+}
+
+input:focus {
+  outline: 0;
+  border-color: #3f51b5;
+}
+
+mat-card {
+  width: 80%;
+  max-width: 600px;
+  margin: auto;
+  border-radius: 16px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.ajax-loader, .ajax-loader2, .ajax-loader3, .ajax-loader4{
+	position: absolute;
+	transform-origin: 50% 50%;
+	font-size: 100px;
+	width: 1em;
+	height: 5em;
+	color: #333;
+
+	.paw{
+		width: 1.5em;
+		height: 2em;
+		animation: 2050ms pawAnimation ease-in-out infinite;
+		opacity: 0;
+  
+		
+		svg, i{
+			width: 100%;
+			height: 100%;
+		}
+
+    &:nth-child(odd){
+			transform: rotate(0deg);
+		}
+
+		&:nth-child(even){
+			transform: rotate(0deg) scaleX(-1) translate(15%, -50%);
+		}
+
+		@for $i from 1 through 10{
+      
+       @if($i % 2 == 0){
+            &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) scaleX(-1) translate3d($i*5%, $i*-50%, 0);
+              //animation: ($i/2)*0.5s path1 ease-in-out;
+            }
+      }
+      @else{
+         &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) translate3d($i*-4%, $i*-48%, 0);
+            }
+      }
+      
+      
+         
+     @if($i == 1){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(-8deg) translate3d($i*30%, $i*-50%, 0);
+            }
+      }
+      @if($i == 2){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(-8deg) scaleX(-1) translate3d($i*-15%, $i*-60%, 0);
+              //animation: ($i/2)*0.5s path1 ease-in-out;
+            }
+      }
+      
+      
+      
+      
+     @if($i == 3){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) translate3d($i*15%, $i*-48%, 0);
+            }
+      }
+      @if($i == 4){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) scaleX(-1) translate3d($i*-8%, $i*-50%, 0);
+              //animation: ($i/2)*0.5s path1 ease-in-out;
+            }
+      }
+      
+      
+      
+      @if($i == 5){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) translate3d($i*8%, $i*-48%, 0);
+            }
+      }
+      @if($i == 6){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(0deg) scaleX(-1) translate3d($i*-5%, $i*-50%, 0);
+              //animation: ($i/2)*0.5s path1 ease-in-out;
+            }
+      }
+      
+            
+      @if($i == 7){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(1deg) translate3d($i*1%, $i*-48%, 0);
+            }
+      }
+      @if($i == 8){
+           &:nth-child(#{$i}){
+            	animation-delay: #{ (($i * -1)+10)*0.25 }s;
+              transform: rotate(1deg) scaleX(-1) translate3d($i*1%, $i*-50%, 0);
+              //animation: ($i/2)*0.5s path1 ease-in-out;
+            }
+      }
+      
+  }//for loop ends
+  
+
+        .no-cssanimations &{
+        	opacity: 1;
+        }
+	}
+}
+
+.ajax-loader{
+	top: 15%;
+	left: 10%;
+	transform: rotate(10deg) translate(-50%, 0%);
+ 
+}
+.ajax-loader2{
+	top: 15%;
+	right: 20%;
+	transform: rotate(-10deg) translate(-50%, 0%);
+  
+}
+
+.ajax-loader3{
+	top: 45%;
+	left: 30%;
+	transform: rotate(150deg) translate(-50%, 0%);
+}
+
+.ajax-loader4{
+	top: 45%;
+	right: 35%;
+	transform: rotate(200deg) translate(-50%, 0%);
+}
+
+@keyframes pawAnimation {
+	0%{
+		opacity: 1;
+	}
+	50%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 0;
+	}
+}
+
+@keyframes path1{
+  0%{
+    transform: rotate(0deg) scaleX(-1) translate3d(0%, -50%, 0);
+  }
+  30%{
+    transform: rotate(20deg) scaleX(-1) translate3d(-35%, -60%, 0);
+  }
+  100%{
+    transform: rotate(20deg) scaleX(-1) translate3d(-0%, -80%, 0);
   }
 }
