--- a/frontend/petshealth/src/app/prescriptions/prescriptions.component.scss
+++ b/frontend/petshealth/src/app/prescriptions/prescriptions.component.scss
@@ -5,6 +5,10 @@
   text-align: center;
   color: #3f51b5;
 }
+.grid-item {
+  position: relative;
+  z-index: 2;
+}
 
 .item {
   height: fit-content;
