--- a/frontend/petshealth/src/app/therapies/therapies.component.scss
+++ b/frontend/petshealth/src/app/therapies/therapies.component.scss
@@ -6,6 +6,10 @@
   color: #3f51b5;
 }
 
+.grid-item {
+  position: relative;
+  z-index: 2;
+}
 .item {
   height: fit-content;
   width: auto;
@@ -13,6 +17,7 @@
   background-color: #f2f2f2;
   border-bottom: 1px solid #dcdcdc;
   text-align: center;
+  
 
   p, u {
     background-color: #f0e68c;
