adding editing for vets and refactoring

--- a/frontend/petshealth/src/app/header/header.component.html
+++ b/frontend/petshealth/src/app/header/header.component.html
@@ -21,7 +21,7 @@
 
   <div class="name">PetsHealth</div>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="navigateToSelectPet()">Back to Select Pet</button>
+    <button *ngIf="isUser" mat-menu-item (click)="navigateToSelectPet()">Back to Select Pet</button>
     <button mat-menu-item (click)="logout()">Logout</button>
   </mat-menu>
   
