--- a/frontend/petshealth/src/app/login/login.component.html
+++ b/frontend/petshealth/src/app/login/login.component.html
@@ -6,6 +6,7 @@
       fxLayout="column"
       fxLayoutAlign="space-around center"
     >
+    <h2>Please log in to continue</h2>
       <div
         class="floating-label"
         fxLayoutAlign="space-between start"
