--- a/frontend/petshealth/src/app/navbar/navbar.component.html
+++ b/frontend/petshealth/src/app/navbar/navbar.component.html
@@ -10,9 +10,13 @@ color="primary" >
 <a *ngIf="isUser" mat-list-item routerLink="/home/appointment" routerLinkActive="active">
   Schedule an appointment
 </a>
-    <a mat-list-item routerLink="/home/visit" routerLinkActive="active">Visits</a>
-    <a mat-list-item routerLink="/home/therapies" routerLinkActive="active">Therapies</a>
-    <a mat-list-item routerLink="/home/prescription" routerLinkActive="active">Prescription</a>
+<a *ngIf="!isUser" mat-list-item routerLink="/home/vetappointment" routerLinkActive="active">
+  Appointments
+</a>
+<a *ngIf="isUser" mat-list-item routerLink="/home/visit" routerLinkActive="active">Visits</a>
+    <a  *ngIf="isUser" mat-list-item routerLink="/home/visit" routerLinkActive="active">Visits</a>
+    <a *ngIf="isUser" mat-list-item routerLink="/home/therapies" routerLinkActive="active">Therapies</a>
+    <a  *ngIf="isUser" mat-list-item routerLink="/home/prescription" routerLinkActive="active">Prescription</a>
     
   </mat-nav-list>
   
