--- a/frontend/petshealth/src/app/visitdetail/visitdetail.component.scss
+++ b/frontend/petshealth/src/app/visitdetail/visitdetail.component.scss
@@ -37,3 +37,27 @@ mat-card {
     border-bottom: none;
   }
   
+  button {
+    min-width: 100px;
+    border-radius: 24px;
+    text-align: center;
+    padding: 15px 40px;
+    margin-top: 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
+    border: none;
+    background-color: #3f51b5;
+    transition: all 0.3s ease;
+    outline: 0;
+  }
+  
+  button:hover {
+    background-color: #303f9f;
+    transform: translateY(-3px);
+  }
+  
+  button:active {
+    transform: scale(0.99);
+  }
